--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "harry-potter-memory",
+  "name": "alarm-clock",
   "version": "1.0.0",
-  "description": "A memory game featuring characters from harry potter",
+  "description": "an alarm clock",
   "main": "index.js",
   "scripts": {
     "test": "test"
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bower-files": "^3.14.1",
+    "browser-sync": "^2.18.8",
     "browserify": "^14.1.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
